; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_image-source.c_image_source_show.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/image-source/extr_image-source.c_image_source_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image_source = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @image_source_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @image_source_show(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.image_source*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.image_source*
  store %struct.image_source* %5, %struct.image_source** %3, align 8
  %6 = load %struct.image_source*, %struct.image_source** %3, align 8
  %7 = getelementptr inbounds %struct.image_source, %struct.image_source* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load %struct.image_source*, %struct.image_source** %3, align 8
  %12 = call i32 @image_source_load(%struct.image_source* %11)
  br label %13

13:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @image_source_load(%struct.image_source*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
